--- a/package.json
+++ b/package.json
@@ -6,13 +6,17 @@
     "start": "expo start",
     "android": "expo start --android",
     "ios": "expo start --ios",
-    "web": "expo start --web"
+    "web": "expo start --web",
+    "lint": "eslint . --ext .js"
   },
   "dependencies": {
     "@expo/webpack-config": "^18.0.1",
+    "@react-native-community/eslint-config": "^3.2.0",
+    "eslint": "^8.40.0",
     "expo": "~48.0.15",
     "expo-keep-awake": "^12.0.1",
     "expo-status-bar": "~1.4.4",
+    "prettier": "^2.8.8",
     "react": "18.2.0",
     "react-native": "0.71.7",
     "react-native-paper": "^5.7.2",
